--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Mursidin</h1>
-      <p>I'm <span class="typed" data-typed-items="Frontend Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Web Developer"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/mursidi18505341" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/mursidin.mursidin.7731247" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -71,7 +71,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Halo, saya mursidin, saya seorang frontend developer. Saya mengenal web programming sejak tahun 2019, saya kuliah di Universitas Islam Makassar dan saya juga tergabung dalam komunitas pondok informatika Makassar.</p>
+          <p>Halo, saya mursidin, saya seorang web developer. Saya mengenal web programming sejak tahun 2019, saya kuliah di Universitas Islam Makassar dan saya juga tergabung dalam komunitas pondok informatika Makassar.</p>
         </div>
 
         <div class="row">
