update section portfolio

--- a/index.html
+++ b/index.html
@@ -264,6 +264,34 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/confie.id.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Confie.id</h4>
+                <p>Confie.id</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/confie.id.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="https://confie.id/login" target="_blank"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/mavens.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Mavens</h4>
+                <p>Mavens</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/mavens.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="https://www.mavens.live/" target="_blank"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
       </div>
     </section><!-- End Portfolio Section -->
 
