--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span class="age"></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>pelajar</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>S1 Tekik Informatika</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mursidinrm14</span></li>
                 </ul>
               </div>
@@ -169,16 +169,16 @@
 
           <div class="col-lg-6">
             <div class="progress">
-              <span class="skill">PHP <i class="val">50%</i></span>
+              <span class="skill">PHP <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Reactjs <i class="val">80%</i></span>
+              <span class="skill">Reactjs <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -186,6 +186,20 @@
               <span class="skill">Bootstrap <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Laravel <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">WordPress <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -287,6 +301,20 @@
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/mavens.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                   <a href="https://www.mavens.live/" target="_blank"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/degrees.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Degrees Golf</h4>
+                <p>Degrees Golf</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/degrees.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="https://degreesgolf.co.id/" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
